src/root.css
/* ... */
.btn-xcom {
    clip-path: polygon(
        0 0,
        calc(100% - 30px) 0,
        100% 30px,
        100% 100%,
        30px 100%,
        0 calc(100% - 30px)
    );
    /* background-color: teal !important; */
    /* --tw- */
}

.badge {
    padding: 0.75em;
    padding-bottom: 1em;
    margin-left: 0.25em;
    margin-right: 0.25em;
}

.none {
    all: initial !important;
    color: #aaaaaa !important;
}

/* Some of Tailwind Typeography '.prose' settings are a bit wonky, but most are worthwhile */
.prose {
    max-width: initial !important; /* 65ch is difficult to override, let's nuke it */
    margin-left: auto;
    margin-right: auto;
}
.prose img {
    margin-top: 0;
    margin-bottom: 0;
}
.prose figure {
    margin-top: 0;
    margin-bottom: 0;
}
.prose h2.card-title {
    margin-top: 0;
    margin-bottom: 0;
}

.prose pre,
pre {
    font-family: "OCR A", monospace;
    background-color: #000000;
    color: #ffffff;
    padding: 1em;
    border-radius: 0.5em;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

/* .modal {
    background: #ff0000 !important;
} */

/* header menu active link */
.menu :where(li:not(.menu-title):not(:empty)) > :where(:not(ul).active),
.menu :where(li:not(.menu-title):not(:empty)) > :where(*:not(ul):active) {
    background-color: transparent;
    border: 1px solid #409aff;
}

.menu :where(li) > :where(*:not(ul)) {
    /* gap: 0.75em;
  padding-left: 1em;
  padding-right: 1em; */
    padding-top: 0.1em;
    padding-bottom: 0.1em;
    /* color: currentColor; */
}

.input,
.textarea,
.select,
.checkbox,
.radio,
.file {
    font-size: 1.4em;
}

input::placeholder,
textarea::placeholder {
    opacity: 0.25;
    color: #aaaaaa;
}

code {
    font-family: "OCR A", monospace;
    background-color: #000000;
    color: #00ff00;
    padding: 0.5em;
}

.translucent {
    color: #73e5ff;
}

hr {
    border-top: 1px solid #73e5ff66;
    margin-top: 0.25em;
    margin-bottom: 0.25em;
}

.hh01 {
    --hud-tl1: clip;
    --hud-tl1-size: 2.5em;

    --hud-br1: clip;
    --hud-br1-size: 2.5em;

    --hud-inlay-bg: #b2a5fd;
    /* --hud-inlay-opacity: 0.33; */

    padding: 1.5em;
    margin: auto;
    max-width: 66%;
}

.hexed {
    --hud-inlay-bg: #0bb2b0;
    --hud-inlay-opacity: 0.1;
    --hud-bl-inset: 0.75em;
    --hud-tr1: clip;
    --hud-tr1-size: 3em;
    --hud-l2: clip;
    --hud-l1: clip;
    --hud-bl2: round;
    --hud-bl1: clip;
    --hud-l2-size: 1em;
    --hud-l2-inset-y: 25%;
    --hud-l1-size: 0.25em;
    --hud-bl2-size: 1em;
    --hud-bl1-size: 0.5em;
    --hud-b1: clip;
    --hud-b1-size: 1em;
    --hud-b1-inset-x: 33%;
    --hud-b2: clip;
    --hud-b2-size: 0.25em;
    --hud-br1: round;
    --hud-br1-size: 1em;
    width: 100%;
    height: max(50%, 150px);
    --hud-inlay-all: 7px;
    --hud-border-all: 2px;
    --hud-border-opacity: 0.75;
    --hud-border-bg: #0bb2b0;

    padding: 3em;
    margin: auto;
    max-width: 80%;
}

/* <div id="announc3ment" data-augmented-ui="" class=""> */
#xcomgreenright {
    --aug-clip-tl1: initial;
    --aug-round-tr1: initial;
    --aug-clip-br1: initial;
    --aug-round-bl1: initial;
    --aug-border: initial;
    --aug-inlay: initial;
    --aug-border-all: 1px;
    --aug-inlay-all: 2px;
    --aug-border-bg: lime;
    --aug-inlay-bg: lime;
    --aug-inlay-opacity: 0.06;
    --aug-tl1: 40px;
    --aug-br1: 40px;
    --aug-tr1: 10px;
    --aug-bl1: 10px;
    /* color: #cccccc;
    text-align: center; */
    /* padding-left: 30px;
    padding-right: 30px; */
    /* padding-top: 20px; */
    /* padding-bottom: 20px;
    max-width: 66%; */
    /* margin: 0.25rem auto; */
    /* font-size: 0.9em; */
    /*background: url("/img/chubie.png") right 30px bottom 10px / auto 75% no-repeat;*/
}

#xcomgreenright:hover {
    --aug-inlay-opacity: 0.1;
}

#xcomgreenright::before {
    transition: opacity 1s ease-in;
}

#xcomgreenright:hover::before {
    transition: opacity 1s ease-in 3s;
}

#xcomgreenright b {
    color: white;
    font-size: 1em;
}

#xcomblueleft {
    /* --aug-clip-tl1: initial; */
    /* --aug-round-tr1: initial; */
    /* --aug-clip-br1: initial; */
    /* --aug-round-bl1: initial; */
    --aug-border: initial;
    --aug-inlay: initial;
    --aug-border-all: 1px;
    --aug-inlay-all: 2px;
    --aug-border-bg: #026087;
    --aug-inlay-bg: #010f1a;
    --aug-inlay-opacity: 0.7;
    /* --aug-tl1: 40px; */
    /* --aug-br1: 40px; */
    /* --aug-tr1: 10px; */
    --aug-bl1: 30px;
    --aug-b1: 20px;
    /* --aug-br: 30px; */
    /* color: #cccccc;
    text-align: center; */
    /* padding-left: 30px;
    padding-right: 30px; */
    /* padding-top: 20px; */
    /* padding-bottom: 20px;
    max-width: 66%; */
    /* margin: 0.25rem auto; */
    /* font-size: 0.9em; */
    /*background: url("/img/chubie.png") right 30px bottom 10px / auto 75% no-repeat;*/
}

.planchunk {
    border: 1px solid #73e5ff55;
    padding: 0.75em;
}

